<resources>
    <string name="app_name">Learn Tangale</string>
    <string name="action_settings">Settings</string>

    <!-- string resource for sharedpreferences -->
    <string name="pref_translation_key">translation</string>
    <string name="pref_english_translation_label">English</string>
    <string name="pref_hausa_translation_label">Hausa</string>
    <string name="pref_english_translation_value">english</string>
    <string name="pref_hausa_translation_value">hausa</string>
    <string name="pref_summary_on">Yes</string>
    <string name="pref_summary_off">No</string>
    <string name="pref_show_image_key">show_image</string>
    <string name="pref_show_image_title">Show Image</string>


    <!-- string resource for search screen -->
    <string name="action_search">Search</string>
    <string name="search_hint_english">Search by English</string>
    <string name="search_hint_hausa">Search by  Hausa</string>

    <!-- string resource for favorite screen -->
    <string name="delete_message">Are you sure you want remove this from the favorites</string>
    <string name="delete_title"> Delete favorites</string>

    <!-- string resource for navigation drawer -->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_Rate_app">Rate this App</string>
    <string name="nav_send_feedback">Send Feedback</string>
    <string name="nav_about_developer">About Developer</string>


    <string name="developer_profile">
        Salabson S. Isa is a seasoned Software Engineer who develops Desktop,
        Web and Moblie applications. He is the Founder and CEO of Digital Touch Lab,
        an I.T. firm.
    </string>
    <string name="developer_contact">
        +2348064199991
        +2349023811119

        salabson4@yahoo.co.uk
        salabson4@gmail.com
        digitaltouchlab_ng@gmail.com
    </string>

    <string name="facebook">https://www.facebook.com/salabson</string>
    <string name="twitter">https://twitter.com/salabson4</string>
    <string name="linkin">https://https://www.linkedin.com/in/salabson/</string>
</resources>
