<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/nav_favorites"
        android:title="@string/nav_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"/>
    <item
        android:id="@+id/nav_rate"
        android:title="@string/nav_Rate_app"
        android:icon="@drawable/ic_rate"/>
    <item
        android:id="@+id/nav_send_feedback"
        android:title="@string/nav_send_feedback"
        android:icon="@drawable/ic_message_black_24dp"/>
    <item
        android:id="@+id/nav_about_developer"
        android:title="@string/nav_about_developer"
        android:icon="@drawable/ic_person_black_24dp"/>
</group>
</menu>